add Html Elements

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.htmlelements</groupId>
+            <artifactId>htmlelements-java</artifactId>
+            <version>1.18</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
